# glare

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
schematics/glare/: glare.kicad_prl  glare.kicad_pro  glare.kicad_sch
src/: camera.rs  command.rs  driver.rs  lib.rs  main.rs
tests/: integration.rs
