[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["VersBinarii <versbinarii@gmail.com>"]
name = "glare"
edition = "2018"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1.0.0"
embedded-hal = "0.2.6"
heapless = "0.7.10"
# TODO(4) enter your HAL here
# some-hal = "1.2.3"
[dependencies.stm32f4xx-hal]
version = "0.12.0"
features = ["rt","stm32f411"]

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = 'false'
opt-level = 3 # <-
overflow-checks = false # <-
